# slackell

./: slackell.cabal
example/: Main.hs
src/: Slackell.hs
src/Slackell/: Client.hs
src/Slackell/Internal/: HTTP.hs
