cabal-version: 3.0
name: slackell
version: 0.0.1.0
author: mtwtkman
maintainer: 924277+mtwtkman@users.noreply.github.com
build-type: Simple

common warnings
  ghc-options: -Wall

executable example
  import: warnings
  build-depends:
    aeson,
    base,
    req,
    slackell,
    text,

  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: example

library
  import: warnings
  build-depends:
    aeson,
    base ^>=4.17.2.1,
    bytestring,
    req,
    text,

  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Slackell
    Slackell.Client
    Slackell.Internal.HTTP
